[package]
name = "p-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.6.0"
serde = "1.0.166"
serde_json = "1.0.99"
serenity = "0.11"
sqlite = "0.31.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
